clang/test/BSC/Negative/Generic/StructAndFunction/invalid_method_definition/preceding_identifier.cbs
// RUN: %clang_cc1 -verify %s

safe T0 struct MyStruct<T0>::foo_a(T0 a) {
// expected-error@-1 {{unknown type name 'safe'}}
// expected-error@-2 {{no template named 'MyStruct'}}
// expected-error@-3 {{explicit specialization of undeclared template struct 'MyStruct'}}
// expected-error@-4 {{expected ';' at end of declaration}}
// expected-error@-5 {{unsupported global scope specifier '::'}}
// expected-error@-6 {{unknown type name 'T0'}}
    return a;
}
;

union U<T1>{ // expected-note 2 {{template parameter is declared here}}
    int m;
    T1 a;
};

safe T1 union U<T1>::foo(union U<T1> *this, int m)
// expected-error@-1 {{unknown type name 'safe'}}
// expected-error@-2 {{expected ';' at end of declaration}}
// expected-error@-3 2 {{template argument for template type parameter must be a type}}
// expected-error@-4 {{unsupported global scope specifier '::'}}
{
    this->a = this->a + (T1)m;
    // expected-error@-1 {{expected ';' after expression}}
    // expected-warning@-2 {{expression result unused}}
    return this->a;
}
;

struct S<T2>{ // expected-note 3 {{template parameter is declared here}}
    T2 a;
    int b;
};

safe T2 struct S<T2>::foo(struct S<T2> *this, struct S<T2> m)
// expected-error@-1 {{unknown type name 'safe'}}
// expected-error@-2 {{expected ';' at end of declaration}}
// expected-error@-3 3 {{template argument for template type parameter must be a type}}
// expected-error@-4 {{unsupported global scope specifier '::'}}
{
    this->a = this->a + m.a;
    return this->a;
}
